19-08-19 - APP: So I figured out updating text. it's a bit messy, but now I can get whatever I send from the
                network into the app.
01-10-19 - WEBSITE: added agenda tile
04-10-19 - APP: Figured out how to do get location
07-10-19 - SERVER: Finished settings framework.