@@ -6,3 +6,4 @@ redis
 pytz
 pickle
 socketio
+Unidecode
