@@ -3,3 +3,4 @@
 01-10-19 - WEBSITE: added agenda tile
 04-10-19 - APP: Figured out how to do get location
 07-10-19 - SERVER: Finished settings framework.
+19-10-19 - SERVER: Finished google library rework, now has easier authentication.
